--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div class="quiz-container">
-  <h1>Quiz: Conflitos Mundiais Recentes</h1>
+  <h1>Quiz: Conflitos Mundiais</h1>
   <p id="question"></p>
   
   <div class="answers">
